fixed the aligment and overflow issues

--- a/global.css
+++ b/global.css
@@ -8,11 +8,8 @@
 *{
     padding:0;
     margin:0;
-    font-family: sans-serif;
-    
+    font-family: "Red Hat Display", sans-serif;  
 }
-
-
 
 .w-full{
     width: 100%;
