--- a/js/component/navbar.css
+++ b/js/component/navbar.css
@@ -1,35 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 
-#navbar{
+header{
     width: 100%;
-    height: 39px;
-    background-color: white;
-    padding: 15px 93px 20px 93px;
-    display: flex;
 }
-
-.list-item{
-    /* background-color: red; */
-    
-  position: relative;
-  top: 12px;
-  right: 32%;
-  width: 96%;
+.container{
+    padding: 15px 93px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header #navbar{
+    width: 100%;
+    background-color: white;
 }
 
 ul{
     display: flex;
-    /* gap:20px; */
-
-    margin-left: 3px;
+    gap: 30px;
+    padding-right: 177px;
 }
 
 ul li{
     list-style: none;
-    font-family: "Red Hat Display", sans-serif;
     font-size: 0.875rem;
     font-weight: 500;
-     padding: 0 0.9375rem 1.75rem;
+    white-space:nowrap;
 }
 
 #navbar .logo{
@@ -39,16 +34,18 @@ ul li{
 #animation-block{
     background-color: #222;
 }
+
 #location-aria{
-     
+    width: auto;
     background-color: #f1f1f1;
-    width: 100%;
     height: 41px;
     padding-left: 166px;
 }
 
-
 #location-aria p{
-font-family: "Red Hat Display", sans-serif;
 padding-top: 1px;
+}
+.para-location-gap{
+    display: flex;
+    gap: 15px;
 }
